# TFG_MultiAgente

./: .gitignore  CONTEXT.md  README.md  pyproject.toml  pyrightconfig.json
doc/capitulos/: 01_introduccion.md  02_estado_del_arte.md  03_metodologia.md  03_objetivos.md  04_desarrollo.md  04_metodologia.md  05_experimentos.md  06_resultados.md  07_conclusiones.md  07_resultados.md
doc/entrega/: 2526_TFG_GCIA_NP147254_ResumenEjecutivo.docx
doc/entregas/2526_TFG_GCIA_NP147254_Entrega1/: 2526_TFG_GCIA_NP147254_ResumenEjecutivo.docx
doc/entregas/2526_TFG_GCIA_NP147254_Entrega2/: 2526_TFG_GCIA_NP147254_ResumenEjecutivo.docx
doc/referencias/: referencias.bib
experiments/: dashboard.py  quick_check.py  run_experiments.py
experiments/configs/: self_reflection.yaml
src/: __init__.py
src/agents/: base_agent.py  baseline_agent.py
src/agents/roles/: __init__.py  architect.py  code_reviewer.py  developer.py  product_manager.py  qa_tester.py
src/evaluation/: humaneval_loader.py  metrics.py  runner.py  sandbox.py
src/graph/: baseline_graph.py  self_reflection_graph.py  sequential_graph.py
src/llm/: __init__.py  client_factory.py
src/state/: schema.py
