[project]
name = "tfg-multiagente"
version = "0.1.0"
description = "Multi-agent LLM orchestration system for automated code generation — TFG evaluation harness"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-huggingface>=0.1.0",
    "huggingface-hub>=0.24.0",
    "datasets>=2.20.0",
    "scipy>=1.13.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
]

[project.optional-dependencies]
experiments = ["rich>=13.0", "tqdm>=4.65"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
